--- a/site/host.html
+++ b/site/host.html
@@ -69,6 +69,20 @@
     </div>
   </div>
 </div>
+<div class="winnerOverlay" id="winnerOv">
+  <div class="winnerCard">
+    <div class="glow"></div>
+    <div class="confetti" id="confetti"></div>
+
+    <div class="winnerTitle">KSSTB'nin Saklan'an Yıldızı : 1. gelen kişi</div>
+    <div class="winnerName" id="winnerName">-</div>
+    <div class="winnerSub small kv" id="winnerMeta">-</div>
+
+    <div style="margin-top:14px">
+      <button id="winnerClose">Kapat</button>
+    </div>
+  </div>
+</div>
 
 <script>
   const API_BASE = "https://asn-quiz.abdulkadir-sezginn.workers.dev";
