--- a/site/play.html
+++ b/site/play.html
@@ -16,7 +16,7 @@
       <input id="name" placeholder="İsmin"/>
       <button class="primary" id="btnJoin" style="width:100%;margin-top:10px;">Join</button>
     </div>
-    <div class="small" style="margin-top:10px;">Host başlatınca soru gelir.</div>
+    <div class="small" style="margin-top:10px;">Mr.Sezgin başlatınca soru gelir.</div>
   </div>
 
   <div class="card" id="qCard" style="display:none;">
@@ -43,7 +43,7 @@
 
   <div class="card" id="waitCard" style="display:none;">
     <div class="big">Beklemede…</div>
-    <div class="small" id="waitMsg">Host sonraki adıma geçince güncellenecek.</div>
+    <div class="small" id="waitMsg">Mr.Sezgin sonraki adıma geçince güncellenecek.</div>
     <div class="hr"></div>
     <div class="big">Top 4</div>
     <div id="top"></div>
